tests/ui/parser/suggest-removing-extra-semicolon-in-item-lists.stderr
error: non-item in item list
  --> $DIR/suggest-removing-extra-semicolon-in-item-lists.rs:8:24
   |
LL | trait Factory {
   |               - item list starts here
LL |     fn create() -> u32;;
   |                        ^ non-item starts here
...
LL | }
   | - item list ends here
   |
help: consider removing this semicolon
   |
LL -     fn create() -> u32;;
LL +     fn create() -> u32;
   |

error: non-item in item list
  --> $DIR/suggest-removing-extra-semicolon-in-item-lists.rs:16:26
   |
LL | impl Local {
   |            - item list starts here
LL |     const VALUE: u32 = 0;;
   |                          ^ non-item starts here
LL |
LL | }
   | - item list ends here
   |
help: consider removing this semicolon
   |
LL -     const VALUE: u32 = 0;;
LL +     const VALUE: u32 = 0;
   |

error: non-item in item list
  --> $DIR/suggest-removing-extra-semicolon-in-item-lists.rs:21:18
   |
LL | unsafe extern "C" {
   |                   - item list starts here
LL |     fn foreign();;
   |                  ^ non-item starts here
LL |
LL | }
   | - item list ends here
   |
help: consider removing this semicolon
   |
LL -     fn foreign();;
LL +     fn foreign();
   |

error: aborting due to 3 previous errors

